# rustcred

./: .gitignore  :  Cargo.toml  LICENSE  README.md  tracked_repos
assets/: about.html  index.html  trackedrepos.html
assets/css/: landing.css
custom_bulma/: package-lock.json  package.json
rustcred/: Cargo.toml
src/: github.rs  main.rs
templates/: about.html  index.html  trackedrepos.html
templates/css/: rustcred.css
