[package]
name = "rustcred"
version = "0.1.0"
authors = ["Said Aspen <mail@saidaspen.se>"]
edition = "2018"

[dependencies]
serde = { version = "1.0.106", features = ["derive"]}
reqwest = {version = "0.10.4", features = ["blocking", "json"]}
serde_json = "1.0.51"

[dev-dependencies]
mockito = "0.25.1"

